# creditcoin-authority-manager

./: .gitignore  Cargo.toml  creditcoin-metadata.scale
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: get-metadata.sh
src/: commands.rs  lib.rs  main.rs  misc.rs
src/commands/: get_set.rs  log_filters.rs  nonce.rs
