[package]
name = "creditcoin-authority-manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["derive"] }
color-eyre = "0.6.2"
extend = "1.2.0"
futures = "0.3.28"
hex = "0.4.3"
parity-scale-codec = "3.5.0"
sp-core = "20.0.0"
sp-tracing = "10.0.0"
strum = { version = "0.24.1", features = ["derive"] }
subxt = "0.28.0"
tabled = { version = "0.12.0", features = ["color"] }
tokio = { version = "1.28.2", features = ["full"] }
